fix spacing on mobile menu icon

--- a/sass/sections/_header.scss
+++ b/sass/sections/_header.scss
@@ -4,7 +4,7 @@ header {
   width: 100%;
   position: fixed;
   top: -274px;
-  left: calc(100vw - 70px);
+  left: calc(100vw - 80px);
 }
 
 header.dropdown-active {
